force-app/main/default/objects/Sponsor__c/Sponsor__c.object-meta.xml
<CustomObject>
    <label>Sponsor</label>
    <nameField>
        <label>Sponsor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>