force-app/main/default/objects/Sponsor__c/fields/LogoUrl__c.field-meta.xml
<CustomField>
    <fullName>LogoUrl__c</fullName>
    <inlineHelpText>The Url for the Sponsor to show on the webiste</inlineHelpText>
    <label>Logo Url</label>
    <type>Url</type>
</CustomField>