force-app/main/default/objects/Sponsor__c/fields/PriceAfterDiscount__c.field-meta.xml
<CustomField>
    <fullName>PriceAfterDiscount__c</fullName>
    <formula>Amount__c -  DiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price (After Discount)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>