force-app/main/default/objects/Sponsor__c/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The contact person who is responsible for signing the contract. Make sure the contact has the email populated.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sponsors</relationshipLabel>
    <relationshipName>Sponsors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>