force-app/main/default/objects/Sponsor__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>This will indicate the status of the Sponsor</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sponsor_Status</valueSetName>
    </valueSet>
</CustomField>