force-app/main/default/objects/Sponsor__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinium</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>À la carte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>